--- a/.github/workflows/experiment.yaml
+++ b/.github/workflows/experiment.yaml
@@ -14,6 +14,8 @@ jobs:
         with:
           # secrets_to_redact: '{"foo":"*"}'        
           secrets_to_redact: '${{ toJSON(secrets) }}'
+          self_monitoring: true
+          self_monitoring_anonymize: false
           debug: 1
         env:
           OTEL_SHELL_CONFIG_GITHUB_INJECT_ON_MAIN: 'TRUE'
