--- a/.github/workflows/observability.yaml
+++ b/.github/workflows/observability.yaml
@@ -11,6 +11,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/workflow@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
