--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -63,6 +66,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -84,6 +90,9 @@ jobs:
         working-directory: ./src
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -152,6 +161,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -223,6 +235,8 @@ jobs:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
         with:
           secrets_to_redact: '${{ toJSON(secrets) }}'
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -259,6 +273,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -293,6 +310,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
@@ -525,6 +545,9 @@ jobs:
       actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.16.5
+        with:
+          self_monitoring: true
+          self_monitoring_anonymize: false
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
