--- a/actions/instrument/job/action.yaml
+++ b/actions/instrument/job/action.yaml
@@ -21,6 +21,12 @@ inputs:
   secrets_to_redact:
     description: 'A JSON object containing all secrets to redact from any attribute.'
     default: '{ "github_token": "${{ github.token }}" }'
+  self_monitoring:
+    description: 'Whether to send usage statistics (invocation counts, feature usages) to the maintainer. No data of the workflow itself will be collected.'
+    default: false
+  self_monitoring_anonymize:
+    description: 'Whether to strip self monitoring data of any identifiable information.'
+    default: true
   debug:
     description: 'Enable debug logging'
     default: '${{ runner.debug }}'
