--- a/.github/workflows/deploy_observability.yaml
+++ b/.github/workflows/deploy_observability.yaml
@@ -22,6 +22,7 @@ jobs:
         with:
           github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
           job_level_instrumentation_exclude: 'Test,Refresh Demos,GitHub,Workflow Example,Experiment'
+          job_level_instrumentation_secret_redaction_strategy: list
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
           OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
