--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -35,8 +35,10 @@ runs:
       id: find-self
       shell: bash
       run: |
-        if [ -r "${{ github.workflow }}" ]; then
-           echo path="${{ github.workflow }}" >> "$GITHUB_OUTPUT"
+        if [ -r '${{ inputs.__repository_level_instrumentation_file_name_override }}' ]; then
+          echo path="${{ inputs.__repository_level_instrumentation_file_name_override }}" >> "$GITHUB_OUTPUT"
+        elif [ -r "${{ github.workflow }}" ]; then
+          echo path="${{ github.workflow }}" >> "$GITHUB_OUTPUT"
         else
           (ls "${{ inputs.workflows_directory }}"/*.yaml "${{ inputs.workflows_directory }}"/*.yml 2> /dev/null || true) | while read -r workflow_file; do
             [ "$(cat "$workflow_file" | yq .name)" = "${{ github.workflow }}" ] && echo path="$workflow_file" >> "$GITHUB_OUTPUT" && break || true
@@ -66,8 +68,8 @@ runs:
             steps:
               - uses: ${{ inputs.action_repository }}/actions/instrument/workflow@${{ inputs.action_version }}
         ' > "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
-        cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
-          value="$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env.'"$key")"
+        cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
+          value="$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env.'"$key")"
           yq -i '.jobs[].steps[0].env.'"$key"' = "'"$value"'"' "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
         done
     - name: "Update workflow-level observability triggers"
@@ -98,8 +100,8 @@ runs:
             if [ -n "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/workflow@*\") | .uses")" ]; then continue; fi
             if [ -n "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/job@*\") | .uses")" ]; then continue; fi
             yq -i ".jobs.$job_name.steps |= ([{ \"uses\": \"${{ inputs.action_repository }}/actions/instrument/job@${{ inputs.action_version }}\" }] + .)" "$workflow_file"
-            cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
-              yq -i ".jobs.$job_name.steps[0].env.$key = \"$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env.'"$key")\"" "$workflow_file"
+            cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
+              yq -i ".jobs.$job_name.steps[0].env.$key = \"$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env.'"$key")\"" "$workflow_file"
             done
           done
         done
@@ -111,10 +113,10 @@ runs:
             cat "$workflow_file" | yq ".jobs.$job_name.steps" | grep -qvF null || continue
             if [ -z "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/job@*\") | .uses")" ]; then continue; fi
             case "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}" in
-              case none) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact')" = null ] || yq -i "del(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*").with.secrets_to_redact)" "$workflow_file";;
-              case list) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact') = "$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE '\${{[[:blank:]]*secrets\.[a-zA-Z0-9_.-]+[[:blank:]]*}}' || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)" ] || yq -i "(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*")).with.secrets_to_redact = '$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE '\${{[[:blank:]]*secrets\.[a-zA-Z0-9_.-]+[[:blank:]]*}}' || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)'" "$workflow_file";;
-              case  all) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact')" = "$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)" ] || yq -i "(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*")).with.secrets_to_redact = '$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)'" "$workflow_file";;
-              case    *) echo '::error ::Illegal secret redaction strategy "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}"!' && exit 1;;
+              none) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact')" = null ] || yq -i "del(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*").with.secrets_to_redact)" "$workflow_file";;
+              list) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact')" = "$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE "$(echo XCR7e1tbOmJsYW5rOl1dKnNlY3JldHNcLlthLXpBLVowLTlfLi1dK1tbOmJsYW5rOl1dKn19Cg== | base64 -d)" || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)" ] || yq -i "(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*")).with.secrets_to_redact = \"$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE "$(echo XCR7e1tbOmJsYW5rOl1dKnNlY3JldHNcLlthLXpBLVowLTlfLi1dK1tbOmJsYW5rOl1dKn19Cg== | base64 -d)" || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)\"" "$workflow_file";;
+               all) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*") | .with.secrets_to_redact')" = "$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)" ] || yq -i "(.jobs.prepare-images.steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/job@*")).with.secrets_to_redact = \"$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)\"" "$workflow_file";;
+                 *) echo '::error ::Illegal secret redaction strategy "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}"!' && exit 1;;
             esac
           done
         done
@@ -198,3 +200,6 @@ inputs:
   debug:
     description: 'Enable debug logging'
     default: ${{ runner.debug }}
+  __repository_level_instrumentation_file_name_override:
+    description: 'INTERNAL ONLY - DO NOT SET MANUALLY'
+    default: ''
