--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -140,7 +140,7 @@ runs:
       shell: bash
       run: |
         (ls "${{ inputs.workflows_directory }}"/*.yaml "${{ inputs.workflows_directory }}"/*.yml 2> /dev/null || true) | while read -r workflow_file; do
-          sed -i 's/#__BLANK_LINE__#//g' $workflow_file"
+          sed -i 's/#__BLANK_LINE__#//g' "$workflow_file"
         done
     - name: Log
       if: ${{ inputs.dry_run }}
