--- a/.github/workflows/test_github.yaml
+++ b/.github/workflows/test_github.yaml
@@ -347,12 +347,17 @@ jobs:
     timeout-minutes: 60
     permissions:
       actions: read
+    strategy:
+      matrix:
+        secret_redaction_strategy: ['none', 'list', 'all']
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/instrument/deploy
         with:
           debug: 1
           dry_run: true
+          job_level_instrumentation_secret_redaction_strategy: ${{ matrix.secret_redaction_strategy }}
           action_repository: '.'
           __repository_level_instrumentation_file_name_override: '.github/workflows/test_github.yaml'
         env:
