--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -190,7 +190,7 @@ inputs:
     default: ''
   job_level_instrumentation_secret_redaction_strategy:
     description: 'Whether to (1) redact no secrets at all, to (2) list them explicitly based on content of the workflow, or to (3) proactively redact all secrets (one of "none", "list", "all").'
-    default: 'all'
+    default: 'list'
   action_repository:
     default: plengauer/opentelemetry-github
   action_version:
