--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,7 +87,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ['14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24'] # TODO make this dynamic
+        version: ['20', '21', '22', '23', '24'] # TODO make this dynamic
       fail-fast: false
     steps:
       - uses: actions/setup-node@v4.4.0
