--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,5 +19,14 @@
         "/^opentelemetry-/"
       ]
     }
+  ],
+  "customManagers": [
+    {
+      "manager": "regex",
+      "fileMatch": ["^README\\.md$"],
+      "matchStrings": ["plengauer/opentelemetry-github/actions/instrument/deploy@(?<currentValue>[\\w.-]+)"],
+      "depNameTemplate": "plengauer/opentelemetry-github/actions/instrument/deploy",
+      "datasourceTemplate": "github-tags"
+    }
   ]
 }
