--- a/actions/instrument/job/action.yaml
+++ b/actions/instrument/job/action.yaml
@@ -22,10 +22,10 @@ inputs:
     description: 'A JSON object containing all secrets to redact from any attribute.'
     default: '{ "github_token": "${{ github.token }}" }'
   self_monitoring:
-    description: 'Whether to send usage statistics (invocation counts, feature usages) to the maintainer. No data of the workflow itself will be collected.'
-    default: false
+    description: 'Whether to send usage statistics (invocation counts, feature usages) to the maintainer to inform roadmap and maintenance efforts. No data of the workflow itself will be collected. Possible values are true, false, and auto (true for repositories on GitHub SaaS, false for private GitHub servers).'
+    default: auto
   self_monitoring_anonymize:
-    description: 'Whether to strip self monitoring data of any identifiable information.'
+    description: 'Whether to strip self monitoring data of any identifiable information. Possible values are true, false, and auto (false for public repository on GitHub SaaS, true for private GitHub servers and private repositories).'
     default: true
   debug:
     description: 'Enable debug logging'
