Do not sleep when demo is not dirty

--- a/.github/workflows/refresh_demos.yaml
+++ b/.github/workflows/refresh_demos.yaml
@@ -239,6 +239,7 @@ jobs:
           reviewers: ${{ steps.reviewers.outputs.reviewers }}
           delete-branch: true
       - run: sleep 60 # make sure PR state is updated and API can catch up
+        if: steps.open-pr.outputs.pull-request-number != null
       - uses: peter-evans/enable-pull-request-automerge@v3
         if: steps.open-pr.outputs.pull-request-number != null
         with:
