--- a/actions/instrument/workflow/action.yaml
+++ b/actions/instrument/workflow/action.yaml
@@ -21,7 +21,7 @@ inputs:
     default: ${{ github.event.workflow_run.run_attempt }}
   self_monitoring:
     description: 'Whether to send usage statistics (invocation counts, feature usages) to the maintainer. No data of the workflow itself will be collected. Possible values are true, false, and auto (true for repositories on GitHub SaaS, false for private GitHub servers).'
-    default: false
+    default: auto
   self_monitoring_anonymize:
     description: 'Whether to strip self monitoring data of any identifiable information. Possible values are true, false, and auto (false for public repository on GitHub SaaS, true for private GitHub servers and private repositories).'
     default: true
