--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -466,7 +466,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   github:
-    needs: smoke
+    needs: build # smoke
     permissions:
       actions: read
       attestations: none
