Pin versions of github actions

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,6 +18,11 @@
       "matchPackageNames": [
         "/^opentelemetry-/"
       ]
+    },
+    {
+      "packagePatterns": [".*"],
+      "managers": ["github-actions"],
+      "rangeStrategy": "pin"
     }
   ],
   "customManagers": [
