--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -51,6 +51,15 @@ runs:
         (ls "${{ inputs.workflows_directory }}"/*.yaml "${{ inputs.workflows_directory }}"/*.yml 2> /dev/null || true) | while read -r workflow_file; do
           cat "$workflow_file" | yq .on.workflow_run.workflows 2> /dev/null | grep -qv '^null$' && cat "$workflow_file" | yq .jobs.*.steps[].uses | grep -q /actions/instrument/workflow && echo path="$workflow_file" >> "$GITHUB_OUTPUT" && break || true
         done
+    - name: "Determine version"
+      id: determine-instrumentation-version
+      shell: bash
+      run: |
+        if [ ${{ inputs.action_version }} = same ]; then
+          cat "${{ steps.find-self.outputs.path }}" | yq -r '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .uses' | cut -d @ -f 2
+        else
+          echo '${{ inputs.action_version }}'
+        fi | xargs -I '{}' echo version='{}' >> "$GITHUB_OUTPUT"
     - name: "Deploy workflow-level observability"
       if: steps.find-workflow-level-instrumentation.outputs.path == null
       shell: bash
@@ -66,7 +75,7 @@ runs:
           export:
             runs-on: ubuntu-latest
             steps:
-              - uses: ${{ inputs.action_repository }}/actions/instrument/workflow@${{ inputs.action_version }}
+              - uses: ${{ inputs.action_repository }}/actions/instrument/workflow@${{ steps.determine-instrumentation-version.outputs.version }}
         ' > "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
         cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
           value="$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env.'"$key")"
@@ -99,7 +108,7 @@ runs:
             cat "$workflow_file" | yq ".jobs.$job_name.steps" | grep -qvF null || continue
             if [ -n "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/workflow@*\") | .uses")" ]; then continue; fi
             if [ -n "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/job@*\") | .uses")" ]; then continue; fi
-            yq -i ".jobs.$job_name.steps |= ([{ \"uses\": \"${{ inputs.action_repository }}/actions/instrument/job@${{ inputs.action_version }}\" }] + .)" "$workflow_file"
+            yq -i ".jobs.$job_name.steps |= ([{ \"uses\": \"${{ inputs.action_repository }}/actions/instrument/job@${{ steps.determine-instrumentation-version.outputs.version }}\" }] + .)" "$workflow_file"
             cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
               yq -i ".jobs.$job_name.steps[0].env.$key = \"$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy*") | .env.'"$key")\"" "$workflow_file"
             done
@@ -194,7 +203,7 @@ inputs:
   action_repository:
     default: plengauer/opentelemetry-github
   action_version:
-    default: v5.16.0
+    default: same
   dry_run:
     default: false
   debug:
